ext/kkm/lib/include/ifptr_c.h


DTOSHARED_EXPORT int DTOSHARED_CCA put_DeviceEnabled(void *ptr, int deviceEnabled);

DTOSHARED_EXPORT int DTOSHARED_CCA get_DeviceSettings(void *ptr, wchar_t *bfr, int bfrSize);

DTOSHARED_EXPORT int DTOSHARED_CCA put_DeviceSettings(void *ptr, const wchar_t *deviceSettings);

DTOSHARED_EXPORT int DTOSHARED_CCA ApplySingleSettings(void *ptr);


DTOSHARED_EXPORT int DTOSHARED_CCA GetStatus(void *ptr);

DTOSHARED_EXPORT int DTOSHARED_CCA CancelCheck(void *ptr);