cpp_so/include/ifptr.h



//! Протокол работы ККТ
enum Protocol
{
    ProtocolDefault = 0,        /*!< По умолчанию для выбранной модели        */
    ProtocolAtol20,             /*!< АТОЛ 2                                   */
    ProtocolAtol30,             /*!< АТОЛ 3                                   */
};


//! Модель ККТ
enum Model
{
    ModelFelicsRF = 14,         /*!< ФЕЛИКС-Р Ф                               */
    ModelFelics02K = 15,        /*!< ФЕЛИКС-02К / ЕНВД                        */
    ModelFelicsRK = 24,         /*!< ФЕЛИКС-РК / ЕНВД                         */
    ModelFelics3SK = 27,        /*!< ФЕЛИКС-3СК                               */
    ModelFPrint02K = 30,        /*!< FPrint-02K / ЕНВД                        */
    ModelFPrint03K = 31,        /*!< FPrint-03K / ЕНВД                        */
    ModelFPrint88K = 32,        /*!< FPrint-88K / ЕНВД                        */
    ModelFPrint5200K = 35,      /*!< FPrint-5200K / ЕНВД                      */
    ModelFPrint55K = 47,        /*!< FPrint-55 ПТК / K / ЕНВД                 */
    ModelFPrint22K = 52,        /*!< FPrint-22 ПТК / K / ЕНВД                 */
    ModelFPrint11K = 51,        /*!< FPrint-11 ПТК / ЕНВД                     */
    ModelFPrint77K = 53,        /*!< FPrint-77 ПТК / ЕНВД                     */
    ModelFPrintPay01K = 54,     /*!< FPrintPay-01ПТК                          */
    ModelATOL25F = 57,          /*!< АТОЛ 25Ф                                 */
    ModelATOL30F = 61,          /*!< АТОЛ 30Ф                                 */
    ModelATOL55F = 62,          /*!< АТОЛ 55Ф                                 */
    ModelATOL22F = 63,          /*!< АТОЛ 22Ф (АТОЛ FPrint-22ПТК)             */
    ModelATOL52F = 64,          /*!< АТОЛ 52Ф                                 */
    ModelATOL03F = 65,          /*!< АТОЛ 03Ф                                 */
    ModelATOL11F = 67,          /*!< АТОЛ 11Ф                                 */
    ModelATOL02F = 68,          /*!< АТОЛ 02Ф                                 */
    ModelATOL77F = 69,          /*!< АТОЛ 77Ф                                 */
    ModelSM02 = 71,             /*!< АТОЛ СМ-02 ПТК / ЕНВД                    */
    ModelATOL90F = 72,          /*!< АТОЛ 90Ф                                 */
    ModelFPrint30K = 73,        /*!< Принтер документов FPrint-30 для ЕНВД    */
    ModelEVOTORST2F = 74,       /*!< АТОЛ СТ2Ф                                */
    ModelATOL60F = 75,          /*!< АТОЛ 60Ф                                 */
    ModelKaznacheyFA = 76,      /*!< Казначей ФА                              */
    ModelATOL42FS = 77,         /*!< АТОЛ 42ФС                                */
    ModelATOL15F = 78,          /*!< АТОЛ 15Ф                                 */
    ModelShtrihFRK = 25,        /*!< ШТРИХ-ФР-К                               */
    ModelShtrihLightFRK = 113,  /*!< ШТРИХ-LIGHT-ФР-К                         */
    ModelShtrihMPTK = 150,      /*!< ШТРИХ-М-ПТК                              */
    ModelPiritFR01K = 114,      /*!< ПИРИТ ФР01К                              */
    ModelSpark801T = 123,       /*!< СПАРК-801т                               */
    ModelPiritK = 128           /*!< Pirit K                                  */
};



//! Выравнивание
enum Alignment
{
    AlignmentLeft = 0,      /*!< По левому краю                               */
    AlignmentCenter,        /*!< По центру                                    */
    AlignmentRight          /*!< По правому краю                              */
};


//! Перенос текста
enum TextWrap
{
    TextWrapNone = 0,       /*!< Без переноса                                 */
    TextWrapWord,           /*!< Перенос по словам                            */
    TextWrapLine            /*!< Перенос по строкам                           */
};


//! Типы / состояния чека
enum ChequeType
{
    ChequeClosed = 0,           /*!< Чек закрыт                               */
    ChequeSell,                 /*!< Чек продажи / прихода                    */
    ChequeSellReturn,           /*!< Чек возврат продажи / прихода            */
    ChequeSellAnnulate,         /*!< Чек аннулирования продажи                */
    ChequeBuy,                  /*!< Чек покупки / расхода                    */
    ChequeBuyReturn,            /*!< Чек возврата покупки / расхода           */
    ChequeBuyAnnulate,          /*!< Чек аннулирования покупки                */
    ChequeSellCorrection,       /*!< Чек коррекции прихода                    */
    ChequeSellReturnCorrection, /*!< Чек коррекции возврата прихода           */
    ChequeBuyCorrection,        /*!< Чек коррекции расхода                    */
    ChequeBuyReturnCorrection,  /*!< Чек коррекции возврата расхода           */
};



//! Создает экземпляр драйвера ККТ.
/*!
   При несовпадении версии ver и актуальной будет возвращаться 0, а в лог записываться соответствующее сообщение.
   \param ver Версия драйвера (DTO_IFPTR_VER1)
   \return Указатель на экземпляр драйвера ККТ
   \retval 0 Ошибка
 */
extern "C" DTOSHARED_EXPORT TED::Fptr::IFptr * DTOSHARED_CCA CreateFptrInterface(int ver);


//! Разрушает экземпляр драйвера ККТ.
/*!
   \param iface Экземпляр драйвера ККТ
 */
extern "C" DTOSHARED_EXPORT void DTOSHARED_CCA ReleaseFptrInterface(TED::Fptr::IFptr **iface);